<resources>
    <string name="app_name">HMIN205</string>
    <string name="button1">Exercice 1</string>
    <string name="button2">Exercice 2</string>
    <string name="button3">Exercice 3</string>
    <string name="button4">Exercice 4</string>
    <string name="button5">Exercice 5</string>
    <string name="button6">Exercice 6</string>
    <string name="main_page_name">TP3 - 08/03/2021</string>
    <string name="form_name">Nom</string>
    <string name="form_firstname">Prénom</string>
    <string name="form_email">Email</string>
    <string name="form_password">Mot de passe</string>
    <string name="form_confirm">Valider</string>
    <string name="form_cancel">Annuler</string>
    <string name="dialog_title">Confirmation</string>
    <string name="dialog_message">Voulez vous continuer ?</string>
    <string name="dialog_positive">Oui</string>
    <string name="dialog_negative">Non</string>
    <string name="buttonOk">Ok</string>
    <string name="buttonBack">Retour</string>
    <string name="empty">Aucun</string>
    <string name="buttonCall">Appeler</string>
    <string name="departure">Départ :</string>
    <string name="arrival">Arrivée :</string>
    <string name="buttonTrain">Rechercher</string>
    <string name="no_accelerometer">Il n\'y a pas d\'acceleromètre.</string>
    <string name="ok_accelerometer">Acceleromètre trouvé !</string>
    <string name="form_age">Age</string>
    <string name="form_number">Numéro</string>
    <string name="impossible_action">Action impossible</string>
    <string name="usage">Utilisation</string>
    <string name="show_planning">Affiche Planning</string>
    <string name="time_1">08h-10h</string>
    <string name="time_2">10h-12h</string>
    <string name="time_3">14h-16h</string>
    <string name="time_4">16h-18h</string>
</resources>
